# manga-text-detection

./: CMakeLists.txt  README.md  ccrx.xml  ccx.xml  img2cc.cpp  img2ccr.cpp  img2label.cpp  main.cpp  script.sh  svmtrain.cpp
train/connectedcomponents/notword/: AosugiruHaru.xml  Arisa.xml  BakuretsuKungFuGirl.xml  DollGun.xml  EvaLady.xml  LoveHina.xml
train/connectedcomponents/word/: AosugiruHaru.xml  Arisa.xml  BakuretsuKungFuGirl.xml  DollGun.xml  EvaLady.xml  LoveHina.xml
train/connectedcomponentsregions/notword/: Belmondo.xml  Donburakokko.xml  GarakutayaManta.xml  Jyovolley.xml  MagicStarGakuin.xml  MariaSamaNihaNaisyo.xml
train/connectedcomponentsregions/word/: Belmondo.xml  Donburakokko.xml  GarakutayaManta.xml  Jyovolley.xml  MagicStarGakuin.xml  MariaSamaNihaNaisyo.xml
